Fix for status text being a bit too big

--- a/html/stylesheet.css
+++ b/html/stylesheet.css
@@ -1,5 +1,5 @@
 #status{
-    font-size: 18vw;
+    font-size: 16vw;
 }
 #displayName{
 	display:none;
